--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vizceral-react",
+  "name": "revizceral-react",
   "version": "4.5.4",
   "description": "A React wrapper around vizceral",
   "main": "dist/vizceral.js",
